--- a/src/Labs/FrontBundle/Resources/views/Default/about.html.twig
+++ b/src/Labs/FrontBundle/Resources/views/Default/about.html.twig
@@ -31,54 +31,12 @@
                 <div class="fslider flex-thumb-grid grid-6" data-pagi="false" data-arrows="false" data-thumbs="true">
                     <div class="flexslider">
                         <div class="slider-wrap">
-                            <div class="slide" data-thumb="images/gallery/thumbs/1.jpg">
-                                <img src="images/gallery/1.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Government Contraction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/2.jpg">
-                                <img src="images/gallery/2.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Home Renovation</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/3.jpg">
-                                <img src="images/gallery/3.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Residential Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/4.jpg">
-                                <img src="images/gallery/4.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Wooden Floor</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/5.jpg">
-                                <img src="images/gallery/5.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Repairing of Houses</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/6.jpg">
-                                <img src="images/gallery/6.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Building Renovaion</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/7.jpg">
-                                <img src="images/gallery/7.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Hightech Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/8.jpg">
-                                <img src="images/gallery/8.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Hardwood Flooring</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/9.jpg">
-                                <img src="images/gallery/9.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Commercial Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/10.jpg">
-                                <img src="images/gallery/10.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Repairing Of Roof</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/11.jpg">
-                                <img src="images/gallery/11.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Home Renovation</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/12.jpg">
-                                <img src="images/gallery/12.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Office Renovation</div>
-                            </div>
+                            {% for service in services %}
+                                <div class="slide" data-thumb="{{ service.assertPath|imagine_filter('my_thumb_small_service') }}">
+                                    <img src="{{ service.assertPath|imagine_filter('my_thumb_small_full') }}" alt="Image">
+                                    <div class="flex-caption slider-caption-bg slider-caption-bg-light">{{ service.title }}</div>
+                                </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -89,67 +47,26 @@
     <div class="clear"></div>
 
     <div class="section nopadding common-height dark topmargin clearfix">
-        <div class="col-md-4 parallax hidden-xs" style="background: url('images/services/parallax.jpg') center center repeat; background-size: cover;" data-stellar-background-ratio="0.9">
+        <div class="col-md-4 parallax hidden-xs" style="background: url('{{ asset('img/agr/parallax.jpg') }}') center center repeat; background-size: cover;" data-stellar-background-ratio="0.9">
             <div>&nbsp;</div>
         </div>
         <div class="col-md-8">
             <div class="col-padding">
 
                 <div class="row common-height clearfix">
-                    <div class="col-sm-6 bottommargin">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/building.png" alt="Concrete Developments"></a>
+                    {% for activite in services %}
+                        <div class="col-sm-6 bottommargin">
+                            <div class="feature-box fbox-plain">
+                                <div class="fbox-icon">
+                                    <a href="#">
+                                        <img src="{{ activite.assertPath|imagine_filter('my_thumb_small_icon') }}" alt="{{ activite.title }}">
+                                    </a>
+                                </div>
+                                <h3>{{ activite.title }}</h3>
+                                <p>{{ activite.content }}</p>
                             </div>
-                            <h3>Concrete Developments</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
                         </div>
-                    </div>
-                    <div class="col-sm-6 bottommargin">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/bank.png" alt="Finance Assistance"></a>
-                            </div>
-                            <h3>Finance Assistance</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 bottommargin">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/traffic-cone.png" alt="Smart Builders"></a>
-                            </div>
-                            <h3>Smart Builders</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 bottommargin">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/paint-brush.png" alt="Quality Infrastructure"></a>
-                            </div>
-                            <h3>Quality Infrastructure</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/drawer.png" alt="Interiorly Designed"></a>
-                            </div>
-                            <h3>Interiorly Designed</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><img src="images/icons/paper-money.png" alt="Cost Effective Solutions"></a>
-                            </div>
-                            <h3>Cost Effective Solutions</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
 
@@ -171,15 +88,16 @@
             <div class="col-md-12">
                 <div class="heading-block center">
                     <h2>{{ 'Nos partenaires - clients' }}</h2>
-                    <span>Holisticly incubate enterprise users whereas just in time sources. Rapidiously transition performance based e-business.</span>
+                    <span>{{ 'Nous sommes fiers de conçevoir et construire nos plans et chantier en collaboration avec des Partenaires & Clients Prestigieux' }}</span>
                 </div>
                 <ul class="clients-grid grid-6 nobottommargin clearfix">
-                    <li><a href="#"><img src="images/clients/12.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/4.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/5.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/6.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/7.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/8.jpg" alt="Clients"></a></li>
+                    {% for partner in partners %}
+                        <li>
+                            <a href="{{ partner.url }}" target="_blank">
+                                <img src="{{ partner.assertPath|imagine_filter('my_thumb_partner') }}" alt="{{ partner.name }}">
+                            </a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
