--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,6 +46,10 @@
 
     <link rel="stylesheet" href="{{ asset('agrcss/css/colors.css') }}" type="text/css" />
 
+    <!--[if lt IE 9]>
+    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+    <![endif]-->
+
     <!-- Document Title
     ============================================= -->
     <title>{% block Title %}{% endblock %}</title>
