--- a/src/Labs/BackBundle/Resources/views/Projects/edit.html.twig
+++ b/src/Labs/BackBundle/Resources/views/Projects/edit.html.twig
@@ -1,15 +1,5 @@
 {% extends 'LabsUboldBundle::loyout_ubold.html.twig' %}
 {% block stylesheets %}
-    <style type="text/css">
-          .dz-default{
-              padding-top: 50px;
-          }
-          .uploader span {
-              display: block;
-              font-size: 2rem;
-              text-align: center;
-          }
-    </style>
 {% endblock %}
 {% block title %}{{ 'About - Page | AGR' }}{% endblock %}
 {% block body %}
@@ -53,6 +43,14 @@
                                         <label class="control-label">{{ 'Titre du project' }}</label>
                                         {{ form_row(form.name) }}
                                         {{ form_errors(form.name) }}
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="col-md-5">
+                                        <label class="control-label">{{ 'Lieu de réalisation du project' }}</label>
+                                        {{ form_row(form.lieu) }}
+                                        {{ form_errors(form.lieu) }}
                                     </div>
                                 </div>
 
