--- a/src/Labs/FrontBundle/Resources/views/Default/architect.html.twig
+++ b/src/Labs/FrontBundle/Resources/views/Default/architect.html.twig
@@ -4,11 +4,11 @@
 {% block slide %}
     <!-- Page Title
     ============================================= -->
-    <section id="page-title" class="page-title-parallax page-title-dark page-title-right" style="padding: 250px 0; background-image: url('{{ asset('img/me-parallax.jpg') }}'); background-size: cover; background-position: center center;" data-stellar-background-ratio="0.2">
+    <section id="page-title" class="page-title-parallax page-title-dark page-title-right" style="padding: 250px 0; background-image: url('{{ asset('img/agr/architect-slide.jpg') }}'); background-size: cover; background-position: center center;" data-stellar-background-ratio="0.2">
 
         <div class="container clearfix">
-            <h1>{{ 'Cesare Stefano Bernardinelli'|upper }}</h1>
-            <span>{{ 'architecte-urbaniste italien' }}</span>
+            <h1 style="color:#088000">{{ 'Cesare Stefano Bernardinelli'|upper }}</h1>
+            <span style="color: #088000">{{ 'architecte-urbaniste italien' }}</span>
         </div>
 
     </section><!-- #page-title end -->
