--- a/src/Labs/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/Labs/FrontBundle/Resources/views/Default/index.html.twig
@@ -30,54 +30,12 @@
                 <div class="fslider flex-thumb-grid grid-6" data-pagi="false" data-arrows="false" data-thumbs="true">
                     <div class="flexslider">
                         <div class="slider-wrap">
-                            <div class="slide" data-thumb="images/gallery/thumbs/1.jpg">
-                                <img src="images/gallery/1.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Government Contraction</div>
+                            {% for service in services %}
+                            <div class="slide" data-thumb="{{ service.assertPath|imagine_filter('my_thumb_small_service') }}">
+                                <img src="{{ service.assertPath|imagine_filter('my_thumb_small_full') }}" alt="Image">
+                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">{{ service.title }}</div>
                             </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/2.jpg">
-                                <img src="images/gallery/2.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Home Renovation</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/3.jpg">
-                                <img src="images/gallery/3.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Residential Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/4.jpg">
-                                <img src="images/gallery/4.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Wooden Floor</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/5.jpg">
-                                <img src="images/gallery/5.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Repairing of Houses</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/6.jpg">
-                                <img src="images/gallery/6.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Building Renovaion</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/7.jpg">
-                                <img src="images/gallery/7.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Hightech Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/8.jpg">
-                                <img src="images/gallery/8.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Hardwood Flooring</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/9.jpg">
-                                <img src="images/gallery/9.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Commercial Construction</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/10.jpg">
-                                <img src="images/gallery/10.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Repairing Of Roof</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/11.jpg">
-                                <img src="images/gallery/11.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Home Renovation</div>
-                            </div>
-                            <div class="slide" data-thumb="images/gallery/thumbs/12.jpg">
-                                <img src="images/gallery/12.jpg" alt="Image">
-                                <div class="flex-caption slider-caption-bg slider-caption-bg-light">Office Renovation</div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -88,21 +46,16 @@
     <!-- Architect ----
     ======================= Architect -->
     <div class="section nopadding common-height dark topmargin-sm" style="background-image: url('{{ asset('img/agr/background.jpg') }}'); padding: 120px 0;" data-stellar-background-ratio="0.4">
-        <div class="col-md-5" data-height-lg="597" data-height-md="614" data-height-sm="400" data-height-xs="300" data-height-xxs="200" style="background: url('demos/medical/images/section-bg.jpg') center center no-repeat; background-size: cover;">
+        <div class="col-md-5" data-height-lg="597" data-height-md="614" data-height-sm="400" data-height-xs="300" data-height-xxs="200" style="background: url('{{ asset('img/agr/architect.jpg') }}') center center no-repeat; background-size: cover;">
             <div>&nbsp;</div>
         </div>
         <div id="booking-appointment-form" class="col-md-7 nopadding">
             <div class="bgcolor col-padding">
                 <h2>{{ 'Notre achitect'|upper }}</h2>
-                <p class="nobottommargin">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nisi nobis officiis quibusdam quod saepe! Ad assumenda autem dolor dolorum ducimus et laborum nam! Adipisci dolores esse eum quod. Voluptate!
+                <p class="text-justify">
+                    <strong>Cesare Stefano Bernadinelli est  un architecte-urbaniste italien </strong>  avec une expérience exceptionnelle dans le domaine des stations touristiques et de golf. Titulaire d'une maîtrise en architecture et urbanisation de l'Université polytechnique de Milan, c'est en 1983 qu'il a commencé la mise en œuvre d'installations touristiques, la Planification des projets touristiques, la conception de terrains de golf et centres de villégiature, de villages de vacances, des hôtels, des logements sociaux, des centres commerciaux et des aéroports pour des destinations touristiques.  Pendant plus de 30 ans, il a conçu et construit 26 hôtels et villages de vacances, 3 aéroports internationaux pour le tourisme, ainsi que 6 stations de golf Resort en Europe, dans les Caraïbes, en Amérique latine et au Moyen-Orient. (Les logements Golf Resorts sont des complexes touristiques au milieu de la nature et en regard avec l'histoire de la mer).  Ce concept  qui porte sa signature, est arrivé en Côte d'Ivoire à travers la société Abidjan Golf Résort (AGR). En Côte d’Ivoire où il réside en ce moment, avec AGR, entre 2014 et 2016, il a construit de nombreux édifices et conçoit en ce moment, des projets pour faire revivre le tourisme ivoirien.
                 </p>
-
+                <a href="{{ path('architect') }}" class="button button-3d button-rounded button-green">{{ 'En savoir +' }}</a>
             </div>
         </div>
     </div>
@@ -116,51 +69,19 @@
         </div>
         <div class="clear-bottommargin">
             <div class="row common-height clearfix">
-                <div class="col-md-4 col-sm-6 bottommargin">
-                    <div class="feature-box fbox-plain">
-                        <h3>Concrete Developments</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 bottommargin">
-                    <div class="feature-box fbox-plain">
-                        <h3>Finance Assistance</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 bottommargin">
-                    <div class="feature-box fbox-plain">
-                        <h3>Interiorly Designed</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                    </div>
-                </div>
+                {% for activite in services %}
                 <div class="col-md-4 col-sm-6 bottommargin">
                     <div class="feature-box fbox-plain">
                         <div class="fbox-icon">
-                            <a href="#"><img src="demos/construction/images/icons/paper-money.png" alt="Cost Effective Solutions"></a>
+                            <a href="#">
+                                <img src="{{ activite.assertPath|imagine_filter('my_thumb_small_icon') }}" alt="{{ activite.title }}">
+                            </a>
                         </div>
-                        <h3>Cost Effective Solutions</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
+                        <h3>{{ activite.title }}</h3>
+                        <p>{{ activite.content }}</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 bottommargin">
-                    <div class="feature-box fbox-plain">
-                        <div class="fbox-icon">
-                            <a href="#"><img src="demos/construction/images/icons/traffic-cone.png" alt="Smart Builders"></a>
-                        </div>
-                        <h3>Smart Builders</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 bottommargin">
-                    <div class="feature-box fbox-plain">
-                        <div class="fbox-icon">
-                            <a href="#"><img src="demos/construction/images/icons/paint-brush.png" alt="Quality Infrastructure"></a>
-                        </div>
-                        <h3>Quality Infrastructure</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem minima, facere distinctio placeat.</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
 
@@ -173,111 +94,22 @@
     </div>
 
     <div id="portfolio" class="portfolio grid-container portfolio-full clearfix">
-
-        <article class="portfolio-item pf-media pf-icons">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/1.jpg" alt="The Atmosphere">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
+        {% for project in projects %}
+            <article class="portfolio-item pf-media pf-icons">
+                <div class="portfolio-image">
+                    {% for media in project.medias %}
+                        <img src="{{ media.assertPath|imagine_filter('thumb_project_min_home') }}" alt="{{ project.name }}">
+                    {% endfor %}
+                    <div class="portfolio-overlay">
+                        <a href="{{ path('project_view', {'id': project.id, 'slug': project.slug}) }}" class="center-icon"><i class="icon-line-ellipsis"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3><a href="#">The Atmosphere</a></h3>
-                <span>Chicago, USA</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-illustrations">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/2.jpg" alt="Wavelength Structure">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
+                <div class="portfolio-desc">
+                    <h3><a href="{{ path('project_view', {'id': project.id, 'slug': project.slug}) }}">{{ project.name }}</a></h3>
+                    <span>{{ project.lieu }}</span>
                 </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Wavelength Structure</h3>
-                <span>Madrid, Spain</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-graphics pf-uielements">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/3.jpg" alt="Greenhouse Garden">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Greenhouse Garden</h3>
-                <span>Bali, Indonesia</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-icons pf-illustrations">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/4.jpg" alt="Industrial Hub">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Industrial Hub</h3>
-                <span>Beijing, China</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-uielements pf-media">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/5.jpg" alt="Corporate Headquarters">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Corporate Headquarters</h3>
-                <span>California, USA</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-graphics pf-illustrations">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/6.jpg" alt="Space Station">
-                <div class="portfolio-overlay" data-lightbox="gallery">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Space Station</h3>
-                <span>Moscow, Russia</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-uielements pf-icons">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/7.jpg" alt="Bent Architecture">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Bent Architecture</h3>
-                <span>Melbourne, Australia</span>
-            </div>
-        </article>
-
-        <article class="portfolio-item pf-graphics">
-            <div class="portfolio-image">
-                <img src="demos/construction/images/projects/8.jpg" alt="Lakeview Center">
-                <div class="portfolio-overlay">
-                    <a href="#" class="center-icon"><i class="icon-line-ellipsis"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-desc">
-                <h3>Lakeview Center</h3>
-                <span>Auckland, New Zealand</span>
-            </div>
-        </article>
-
+            </article>
+        {% endfor %}
     </div>
 
     <a href="{{ path('project') }}" class="button button-3d nobottomborder button-full center tright bottommargin-lg t300 font-primary" style="font-size: 26px;">
@@ -297,15 +129,16 @@
             <div class="col-md-12">
                 <div class="heading-block center">
                     <h2>{{ 'Nos partenaires - clients' }}</h2>
-                    <span>Holisticly incubate enterprise users whereas just in time sources. Rapidiously transition performance based e-business.</span>
+                    <span>{{ 'Nous sommes fiers de conçevoir et construire nos plans et chantier en collaboration avec des Partenaires & Clients Prestigieux' }}</span>
                 </div>
                 <ul class="clients-grid grid-6 nobottommargin clearfix">
-                    <li><a href="#"><img src="images/clients/12.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/4.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/5.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/6.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/7.jpg" alt="Clients"></a></li>
-                    <li><a href="#"><img src="images/clients/8.jpg" alt="Clients"></a></li>
+                    {% for partner in partners %}
+                        <li>
+                            <a href="{{ partner.url }}" target="_blank">
+                                <img src="{{ partner.assertPath|imagine_filter('my_thumb_partner') }}" alt="{{ partner.name }}">
+                            </a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
